# cc-hooks

./: README.md
linux/: README.md  install.sh  uninstall.sh
linux/session-color/: README.md  install.sh  session-color.sh  uninstall.sh
macos/: README.md  install.sh  uninstall.sh
macos/notifications/: .gitignore  Info.plist  Package.swift  README.md  config.json.example  webhook.discord.json.example  webhook.gotify.json.example  webhook.slack.json.example
macos/notifications/Sources/: main.swift
macos/session-color/: README.md  install.sh  session-color.sh  uninstall.sh
windows/: .gitignore  README.md  config.json  install.ps1  uninstall.ps1
windows/hooks/: editor-handler.ps1  focus-terminal.ps1  notify.ps1  on-end.ps1  on-submit.ps1  protocol-handler.ps1  register-protocol.ps1
windows/notifications/: .gitignore  Cargo.toml  README.md  config.json.example  webhook.ntfy.json.example
windows/notifications/src/: main.rs
windows/session-color/: Cargo.toml  README.md
windows/session-color/src/: main.rs
